Version 3.0.0     unreleased

	* Convert to Python 3, using v2.42.2 as the basis for conversion.
	* Move source tree from Subversion at SourceForge to Mercurial at BitBucket.
	* Fix long-standing bugs with pre- and post-action hooks, backported from v2.24.4.

Version 2.24.2    05 Jan 2015

	* Add optional size-limit configuration for amazons3 extension.

Version 2.24.1    07 Oct 2014

	* Implement a new tool called cback-amazons3-sync.
	* Add support for missing --diagnostics flag in cback-span script.

Version 2.23.3    03 Oct 2014

	* Add new extension amazons3 as an optional replacement for the store action.
	* Update user manual and INSTALL to clarify a few of the dependencies.
	* Fix encryption unit test that started failing due to my new GPG key.

Version 2.22.0    09 May 2013

	* Add eject-related kludges to work around observed behavior.
	* New config option eject_delay, to slow down open/close
	* Unlock tray with 'eject -i off' to handle potential problems

Version 2.21.1    21 Mar 2013

	* Apply patches provided by Jan Medlock as Debian bugs.
	* Fix typo in manpage (showed -s instead of -D)
	* Support output from latest /usr/bin/split (' vs. `)

Version 2.21.0    12 Oct 2011

	* Update CREDITS file to consistently credit all contributers.
	* Minor tweaks based on PyLint analysis (mostly config changes).
	* Make ISO image unit tests more robust in writersutiltests.py.
	  - Handle failures with unmount (wait 1 second and try again)
	  - Programmatically disable (and re-enable) the GNOME auto-mounter 
	* Implement configurable recursion for collect action.
	  - Update collect.py to handle recursion (patch by Zoran Bosnjak)
	  - Add new configuration item CollectDir.recursionLevel
	  - Update user manual to discuss new functionality

Version 2.20.1    19 Oct 2010

	* Fix minor formatting issues in manpages, pointed out by Debian lintian.
	* Changes required to make code compatible with Python 2.7